k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tes2
  labels:
    app.kubernetes.io/part-of: plataforma-agentes
